pins/3.4.1/harness/agent_prompts.md
# Subagent Prompt Templates

Copy-paste templates for each phase of the harness (see `harness/RESEARCH_AGENTS.md` §8). Substitute these variables everywhere:

| Variable | Example |
|---|---|
| `TICKER` | `JPM` (session folder / catalog identity) |
| `YAHOO_QUOTE_SYMBOL` | `JPM` (Yahoo listing; may differ, e.g. `ADYEN` vs `ADYEN.AS`) |
| `DATE` | `2026-07-25` |
| `ROOT` | `/workspace-stock-research` |
| `S` | `/workspace-stock-research/archive/research/JPM/2026-07-25` (session root; never at repo root) |

Every template already carries the justification contract — do not strip it. Subagents see only their prompt; pass all context explicitly.

**Conventions for all agents:**
- **Yahoo listing**: yfinance / Yahoo / price MCP fetches use `S/meta/run_manifest.json` `quote_symbol` (`YAHOO_QUOTE_SYMBOL`). It may differ from `TICKER` (archive folder). Do not invent an exchange suffix. Orchestrator injects both.
- **Product purpose**: this harness produces **investment-decision research** (fair value, risks, timing, provenance). Optimize for **valuable results the next phase can use** — not for shorter chat or token thrift. Drop noise and raw dumps; never drop material risks, ownership facts, or footnote numbers to look concise.
- **Hermetic scripts**: compute scripts must read session-cached data (`S/data/*.csv`, `S/registry/*.json`) when present and fetch live data only when absent. A rerun on the same session must reproduce the same numbers.
- **Session sharing vs isolation**: **Within this session** agents must use each other’s artifacts under `S/` (handoffs, registry, data). **Across sessions** (other `session_key` under the same or other tickers): do **not** open, list, or mine prior runs for FV, MoS, thesis, handoffs, or “is yesterday complete?” — unless the user explicitly said **resume that folder** or **compare after this run**. Default new-run start: scaffold → work under `S` only. Do **not** open other archive trees for filings (work from `S/data/raw_sec` and `S/data/transcripts` when those exist). See `S/registry/session_isolation.json`.
- **Scripted intermediates / number integrity**: any number used inside an assumption build-up (e.g. realized beta, growth CAGR) must be computed by a script in `S/data/compute/`, not by unscripted mental math. Multi-step arithmetic belongs in compute scripts. Reports and later agents must **rehydrate** judgment numbers from registry/compute paths — never from chat memory.
- **Benchmarks**: use the regional benchmark and sector index declared by the orchestrator in the session's required inputs (and `S/registry/research_brief.json` when present); deviate only with a stated rationale.
- **Market / region context**: read `S/registry/market_context.json` when present (orchestrator writes it with sector_config). Cost of capital and governance dials are **local to listing and cash-flow currency** — do not paste US 10Y/ERP by default for non-USD models. Region modules (`region_*.md`) are advisory only; never apply hardcoded country WACC, ERP tables, or family-control discounts. Intensity `low` may no-op with explicit `noted_only` hooks; `medium`/`high` require real treatment. There is **no always-on region agent** — ownership depth is Agent 2e; CoC judgment is Agent 5.
- **Research brief**: when `S/registry/research_brief.json` exists, treat its investment objective and `must_answer_questions` as the coverage north star. Map findings to those questions; list unanswered items in the handoff so valuation can widen range or Phase 2.5 can add stress.
- **Research depth**: honor `research_brief.research_depth` (`standard` | `deep`) and `market_context.intensity`. **Deep** means more ownership/FX/control/primary-filing work — not skipping quality gates. Never skip filing deep dive. Stress scenarios remain ≥5.
- **Decision-grade return contract** (every agent):
  - **Primary product is on disk** (registry JSON, data CSVs, compute outputs, charts, reports). Chat to the parent is disposable.
  - **Specialist agents**: finish by writing the artifact + handoff. Parent-facing summary = handoff path + 3–5 bullets of what changed for downstream — do not paste full tables or filings into chat.
  - **Swarm workers (Phase 0 / 2.5)**: return **JSON only** with mandatory decision fields (see templates). Prefer **signal density**: 3–6 specific, sourced findings beat 20 generic industry platitudes. Do **not** write `S/data/raw_sec` or transcripts (Phase 1). Returns carry **paths + short excerpts**, not uncapped 10-K prose.
  - **Anti-patterns (FAIL-quality even if schema-valid)**: empty or missing `downstream_relevance` on Phase 0 findings; quantitative claims without sources; inventing litigation/contingent quanta; pasting full filing/HTML into return JSON or handoff; hollow “looks fine” handoffs that hide gaps; report numbers not present in registry/compute.
  - **Orchestrator merges**: write each raw return under `S/registry/raw/` **before** merging; merge for **coverage** (brief questions, risk candidates, stress library) and conflict notes; spot-check ≥3 headline numbers against data/raw — never invent merge numbers.
- **Judgment exemplars (style only)**: before writing judgment-heavy outputs, match the GOOD patterns in `ROOT/harness/exemplars/` (index: `ROOT/harness/exemplars/index.json`). BAD patterns are FAIL-quality even if schema-valid. **Do not copy illustrative numbers into this session.** Agent map: valuation (5) and audit (13) → `rationale_quality.md` + `hooks_quality.md` + `valuation_decision_quality.md`; technical (4), TSR (12), deep dive (2e) → `rationale_quality.md`; **every agent** → `handoff_quality.md` for handoff style. Orchestrator injects the relevant paths into each subagent prompt (do not paste full exemplar banks into every template).
- **Handoff file (required of EVERY agent)**: before finishing, write `S/registry/handoffs/<your_agent_id>.md` (e.g. `2a_fundamentals.md`, `5_valuation.md`, `13_audit.md`) with four sections:
  1. **What I did** — 3-5 bullets: inputs read, outputs written, tools used.
  2. **Data issues & gaps** — anything that failed to fetch, was truncated, stale, missing, or had to be substituted (with the fallback used). If none, say "none".
  3. **Assumptions & deviations** — every judgment call that ISN'T already recorded with rationale in your output artifact: inferred inputs, template deviations, edge cases you resolved by choice.
  4. **For downstream agents & the auditor** — decision-grade soft state:
     - Top 3 things the **next** agent must not miss (with paths).
     - Explicit gaps that should **widen** valuation range or add a stress scenario.
     - Authoritative file paths (not restated tables).
  Keep it under one page. The artifact shows WHAT you produced; the handoff shows WHERE it is soft and what downstream must do. Match `ROOT/harness/exemplars/handoff_quality.md` GOOD pattern (honest gaps, concrete paths, downstream actions).

---

## Orchestrator

### Agent orchestrator

**You are the orchestrator (lead), not a phase specialist subagent.** Follow `ROOT/harness/orchestrator_runbook.md` (phase graph order, phase_status flips, preflight, **price_snapshot freeze before Phase 2**, merges, no audit-authored FDD). Do not paste the full runbook into every subagent.

**HARD RULE — spawn or abandon:** Every specialist (Phase 0 swarm, 2a/2b/2c, 2d, each year-reader, 2e, 1d workers+merge, 1e story then 3p, 4/5/12, 2.5 swarm, 6, 7/8/11, 13) **must** be launched with `spawn_subagent`. You do **not** write their artifacts. Before each spawn:

`python3 scripts/record_spawn.py --ticker T --date D --subagent <id> --phase <phase> --event launch`

After the subagent returns: `--event return` (illegal without a prior launch). Set `execution=subagent` on that agent row. Retry `spawn_subagent` without recording fail if the first launch glitched. **`--event fail` only when you cannot launch and would otherwise do the work yourself** (writes `registry/abandon.json`) and STOP the mission. Do not “do Agent 5 / 2b / reports yourself.” That breaks the harness. Inline specialist work is a machine FAIL.

**Phase graph:** Spawn **subagents** only for the current phase (see HARNESS_MAP). Before each phase:

`python3 scripts/preflight_phase.py --ticker T --date D --phase <phase_id> [--subagent <id>]`

Do not run valuation subagent (5) before phase `2_parallel` preflight passes; do not run audit subagent (13) before phase `5`.

**New-run start (mandatory):** When the user asks to research ticker T (and does not name an existing `session_key` to resume), **existence-check first** (`python3 scripts/verify_ticker.py --ticker T`; `scaffold_session.py` does this then writes). Live Yahoo quote **or** Yahoo search listings → continue with the typed session ticker (`quote_symbol` null). No quote and no listings: **abort** — do not scaffold, do not invent a company. After scaffold, **confirm the Yahoo listing with tools**, stamp `quote_symbol`, then `python3 scripts/verify_listing.py --ticker T --date <session_key>` (do not rename the folder). Non-zero or not a real issuer: abandon and STOP before classification / Phase 0. Then follow **New-run sequence** (bind before classify) and work under that `S`. Always pass **`--orchestrator-model <id>`** (your actual model id, e.g. `grok-4.5`) so `meta/run_manifest.json` records it **before Phase 0** — never invent or guess the model id at finalize after a long context. Optional `--subagent-model` defaults to the same id. Preflight FAILs if missing. **Forbidden:** listing `archive/research/T/`, reading yesterday’s reports/registry, or deciding whether a prior run is “usable” before starting. That is cross-session contamination. Same-day re-runs get a new `session_key` (`date` or auto `date__rN`); keep `S` pointed only at the current folder. Do not inject any prior session paths into subagent prompts. `--skip-ticker-check` is tests/offline only.

**New-run sequence (one list):** listing stamp + `verify_listing.py` → `bind_library.py` **before** `sector_config` → classify KPI sector (§5 first; modules do not classify) → market_context → `classification.json` (§5c engine from `valuation_router.md`) → `research_brief.json` → Phase 0 ∥ 1_parallel. After 1d+FDD: 1e story then 3p; then Agent 5. If a latest annual `.txt` is in `S/data/raw_sec/`, line-range Item 1 / business description before locking `primary_sector`. If bind is empty, classify as today and say so in `sector_config.signals`. Bind **refuses** a completed session (`prediction_snapshot` or finalized `run_manifest`) — never re-bind finished history. Bind must still finish before spawning 2b. Read `ROOT/harness/library.md` (you and Agent 2b only; do **not** paste it or the live library path into other subagents). Inject `session_missing` from bind/index into the **2b** prompt only. Year-reader paths must be `S/data/raw_sec/*.txt`. Do **not** run `harvest_library.py` from a new research run.

**Classify from `ROOT/harness/RESEARCH_AGENTS.md` §5 first** (no scoring algorithm; modules do not classify). If you consult a `sector_*.md` detection list, it is diagnostic only. Empty `module_file` is valid for `standard`. Branded CPG / Consumer Defensive food with commodity-input beta stays `standard` (optional `is_also_growth`); seed the shock in the brief, do not switch the lead module.

**Research brief (new sessions):** after bind + sector_config + market_context, write `research_brief.json`. `must_answer_questions` still min 3. Include at least one question each on (1) the industry game / who sets price, (2) destock vs demand **or** cycle **or** credit/underwriting **or** rate-base (identity-native — do not force the word destock on a bank), (3) whether you would trust retained earnings. Schema minItems stays 3; these seeds are coverage, not extra schema required keys.

---

## Phase 0 — Background research swarm

### Agent phase0_swarm

`AgentSwarm`, subagent_type `explore`, one item per round. Default rounds: (1) company & business model (primary-first if `S/data/raw_sec` annuals exist — short-broad-then-narrow, not a TAM/moat essay), (2) open `must_answer_questions` not already answered by sector_config / market_context, (3) bear case & `risk_candidate` list. Add round (4) only if `module_file` is non-empty **or** `research_depth=deep` **or** intensity medium/high: 2–3 sector-module questions plus control/ownership/FX when intensity warrants. Do **not** spawn standalone TAM, moat, industry, or management encyclopedia rounds — `1d_ind` / `2e` / `1d_rev` own those. Round (1) extra keys when a moat is claimed: `mechanism` (switching_cost|network|cost|scale|brand_price|license|none) and `decay_test`; if mechanism is none, `downstream_relevance` must be `risk_candidate`. Round (3) must include one sourced sentence on whether you would trust retained earnings (buybacks/SBC/M&A) with `downstream_relevance` valuation_input or risk_candidate — not context_only. Do **not** drop bear-case coverage on deep names.

If `S/registry/research_brief.json` exists, map rounds to its `must_answer_questions`; after the swarm, the merge handoff must list which questions are answered vs still open (open items → valuation range widen and/or Phase 2.5 stress).

prompt_template:

```text
You are a research analyst gathering background on {{item}} for TICKER (session S).

Read first: S/registry/sector_config.json, S/registry/market_context.json (if present), and S/registry/research_brief.json (if present). If intensity is medium/high or research_depth is deep, prioritize local institutional facts over US-default framing. Prefer primary sources (filings, IR, exchange) over SEO aggregators when both exist.

Research the assigned topic using web search. Return JSON only (do not write files). Do not open other research sessions or write `S/data/raw_sec` / transcripts (Agent 2b / 2e). Decision-grade contract: 3-6 specific factual findings beat generic filler; every quantitative claim needs a source; full articles stay on the web/cache — do not paste multi-page text into the return.

{"topic": "...",
 "findings": ["3-6 specific, factual bullets with numbers where possible"],
 "sources": ["url1", "url2"],
 "downstream_relevance": "valuation_input | risk_candidate | context_only",
 "brief_questions_touched": ["optional ids/text of research_brief.must_answer_questions this round advances"],
 "excerpts_or_paths": ["optional short quotes or session paths if you cached text"]}

downstream_relevance is REQUIRED (not empty). No inventing. No full-filing dumps.
```

**Merge protocol (main agent):** (1) write each round's verbatim return to `S/registry/raw/phase0_round{N}.json`; (2) merge into `S/registry/background.json` (`{"ticker", "rounds": [...]}` per `harness/schemas/background.schema.json`), deduplicating and resolving conflicts (note them in the finding text); (3) after merging, spot-check 3 headline numbers in the merged file against `S/data/sp_financials.csv` or the raw returns — the merge must not introduce new numbers; (4) coverage check: every `risk_candidate` finding must be listed for Phase 2.5 / risk_bridge attention; unanswered `must_answer_questions` from the brief go into the phase0 handoff.

---

## Phase 1 — Data collection (launch 2a, 2b, 2c in parallel)

### Agent 2a — fundamentals fetcher (`coder`)

```text
Fetch fundamentals for TICKER and its peers (peer list: read S/registry/sector_config.json; if absent, pick 3-5 closest peers and justify).

Primary source: kimi-datasource plugin — call get_data_source_desc("sp_data") then call_data_source_tool for income statement, balance sheet, cash flow, ratios (10 years annual + recent quarters). Also fetch the sector-module KPIs the plugin supports (banking: NII, provisions, deposits, loans, tangible equity; REIT: FFO/AFFO; etc.) and peers' KPIs (NIM, CET1 or equivalents) — if the plugin lacks them, say so in the fetch log so 2b/2d know to source them from filings. Fallback if the plugin errors: yfinance MCP statements for `YAHOO_QUOTE_SYMBOL` (`S/meta/run_manifest.json` `quote_symbol`; may differ from `TICKER`) — note the substitution.

Write:
- S/data/sp_financials.csv — long format: ticker,period_type(Annual|Quarterly),fiscal_year,fiscal_quarter,item,value,unit,currency,source
- S/data/peer_comparison.csv — peers' key multiples and growth rates, with a "source" column
- S/registry/street_estimates.json — vendor FY+1 and FY+2 **consensus revenue and EPS** (yfinance revenue_estimate/earnings_estimate and/or sp_data estimates). Label company_fy vs calendar. This is Agent 5's **default Y1 start** (`street_baseline`), not company guidance and not a price-target path. Schema: ROOT/harness/schemas/street_estimates.schema.json. If the fetch fails, set unavailable=true and log the failure — do not invent consensus. Fetch EBIT/OI when the vendor has it. Record `n_revenue` / `eps_basis`.
- S/registry/data_fetch_log.json — {"ticker", "as_of", "fetched": [...], "failed": [...], "substitutions": [...], "downstream_instructions": [...]} — explicitly tell downstream agents which gaps to fill from filings

Numbers must come from the sources above — do not **invent**. **Do fetch** vendor consensus and label it source=street. State units and currency. NOTE: data-provider "total revenue" for financial firms may be netted differently from filing-basis revenue — record which definition you stored.
```

### Agent 2b — SEC filings (`coder`)

```text
Inventory bound filings already in S/data/raw_sec/ (orchestrator ran bind_library.py). Persist a listing and fetch **only** session_missing[] into S. Read ROOT/harness/library.md. Read S/registry/library_bind.json. Read S/registry/market_context.json when present and honor listing.primary_filing_source / filing_forms_expected — do not pretend EDGAR is primary if the annual is HKEX, DART, or another local venue.

LIBRARY-FIRST (harness ≥ 2.19.0):
- Bind already copied cleaned .txt into S. Do not re-download or reconvert those. Do not write extract_sidecars.py in S/data/compute/. Convert new files with ROOT/packages/kd_research/doc_text.py then `python3 scripts/ingest_library.py --ticker T --from-file PATH`.
- Persist a listing: US → S/registry/raw/filing_index.json; non-US → S/registry/raw/ir_listing.json (items[] with kind, form, fiscal_period, filing_date, accession when known). Not a vibe.
- Fetch into S ONLY session_missing[] (required-set slots not in S, including newer than bound). Do NOT fetch library_gaps[] (older years) into S — that explodes 1c year-readers.
- Required set: 3 most recent unique-FY annuals (5 if research_depth=deep or intensity=high); 2 interims; latest earnings exhibit + supplement. One primary .txt per FY.
- _unlabeled/: line-range read at most 5 txts; label via ingest --label. If a labeled doc fills a required-set slot, copy the txt into S. Ignore-with-log only for kind=other / duplicate hash. Unlabeled that still matches session_missing at finish → FAIL. Do not walk filings/ to mine footnotes.

REQUIRED fetch set (if not already bound):
1. At least the **three most recent annual reports** (US: 10-K; non-US: 20-F / AR / annual equivalents). When `research_brief.research_depth` is `deep` **or** `market_context.intensity` is `high`, fetch **five** annuals when they exist. Extra years are not a substitute for ownership/control depth in 1c.
2. The two most recent interim reports (10-Q / half-year / etc.).
3. The latest earnings 8-K exhibit (EX-99.1 and financial supplement EX-99.2 if any).
Store a cleaned `.txt` sidecar next to HTML/PDF (doc_text.py) so year-readers can section-walk without pasting HTML. Never copy a PDF/HTML-only file into raw_sec.

If session_missing is non-empty: Primary = kimi-datasource plugin (get_data_source_desc("sec_edgar")). Fallback: local sec-edgar MCP (search_company_by_ticker, get_latest_filings, then get_filing_text — it returns only a 20k-char preview in the MCP response; read the COMPLETE filing from the `full_text_path` it returns). Note any substitution. Do not use MCP to re-pull bound years.

HERMETIC STORE (required — **session_missing[] only**):
- Copy newly fetched complete text into S/data/raw_sec/ with stable filenames (accession or form+period). Deep mining and audit re-reads MUST work from the session tree, not only a global MCP cache. Bound files are already the working copy.
- Write-through those new downloads via ingest_library.py --from-file (session path as --from-file).
- Optionally also keep prior-year earnings EX-99.1 outlook text under S/data/raw_sec/ when available (helps the management scorecard) if it is in session_missing.

INDEX ONLY (capped):
- For each filing, extract Business, Risk Factors, MD&A, and financial-statement highlights, capped to ~20k chars total per filing (python3 with ROOT/packages/kd_research/sec_context.py: extract_all_sections + cap_context + context_to_dict).
- Write S/registry/sec_filings.json per ROOT/harness/schemas/sec_filings.schema.json. This is a navigable index — do NOT replace multi-year raw_sec with caps alone. Forms for annuals must pass is_annual_form (10-K/20-F/annual/AR).

IMPORTANT exception: for the MOST RECENT earnings release, also fetch the financial-supplement / data-table exhibit (e.g. 8-K ex-99.2) UNCAPPED — the latest-quarter integrator needs those tables (capital ratios, NIM, TBVPS, credit detail). Store it as S/data/latest_supplement.txt (or .csv if tabular).

Log S/registry/data_fetch_log.json including freshness: checked_at, index_source, index_path, session_missing, fetched_new. Bind-time fields do not count. Gaps so 2e can mark strategy_arc / scorecard coverage degraded.
```

### Agent 2c — news & sentiment (`coder`)

```text
Build the news & sentiment picture for TICKER as of DATE.

Cover: (1) 8-15 material news items from the last ~3 months (earnings, guidance changes, regulator actions, management changes, M&A); (2) positioning: analyst **price-target** consensus and dispersion, short interest, insider transactions (search for these; if a data point is unavailable, say so explicitly rather than omitting the key). FY+1/+2 **revenue/EPS tables** belong in S/registry/street_estimates.json (Agent 2a) — point at that file if present; do not duplicate the table here. Price targets are **not** company guidance; (3) catalyst calendar: next earnings date, known regulatory decisions, product/event dates.

Source reliability (investment quality): prefer primary sources (company IR, SEC/exchange filings, reputable newswires) over SEO farms. Every item needs a source URL when possible. After building the list, run ROOT/packages/kd_research/url_health.py (or equivalent HEAD/GET with short timeout) on http(s) sources and set per-item source_status to ok | dead | unknown | not_url. Dead links: replace with a working primary source or keep the item with source_status=dead and disclose in the handoff — do not invent headlines. Network flakes → unknown is OK with disclosure; do not block the whole agent on one timeout.

Write S/registry/news_sentiment.json per ROOT/harness/schemas/news_sentiment.schema.json. Sentiment labels are your judgment — that's fine, they're labeled as such. Optional: write S/registry/source_health.json with the URL check snapshot for audit.
```

---

## Phase 1b — Agent 2d latest-quarter integrator (`coder`)

### Agent 2d

Run after 2a and 2b.

```text
Integrate the latest quarter for TICKER.

Role: evidence integrator only. Anti-role: do NOT change valuation assumptions (Agent 5 owns overrides).

Inputs: S/registry/sec_filings.json, S/data/latest_supplement.* (the uncapped supplement from 2b — use it first), S/data/sp_financials.csv, S/registry/sector_config.json, S/registry/data_fetch_log.json (its downstream_instructions tell you which gaps to fill), S/registry/street_estimates.json (beat/miss vs Street — do not web-hunt consensus), S/registry/news_sentiment.json (do not re-search the earnings headline if EX-99 / supplement exists). Fetch the earnings-release/press summary via kimi-datasource sec_edgar or web search if not already covered.

Extract per ROOT/harness/schemas/latest_quarter.schema.json: fiscal_period (must match the numbers!), currency, sources (URLs), revenue/earnings vs prior year and vs consensus if findable, guidance (company guidance only — analyst price targets and Street FY estimates are NOT guidance and must not be written into the guidance object; verify raise/cut claims against the prior quarter's guidance, not media headlines), segments, sector KPIs per the sector module, margins, balance sheet, cash flow, capital returns, management_tone, risks. On harness ≥ 2.15.0 also write `cash_quality`: at least one numeric among fcf, cfo, ni/gaap_ni, dso, dio, inventory (nested value OK). AR/inventory days belong here when the BS has them — Agent 5 reads this; you do not write FV. For any historical series you quote (e.g. capital ratios over 4 quarters), verify each point against the prior-quarter supplements, not memory — cite accession/URL per point.

Fiscal labels: use the **company’s own FY label** in fiscal_period and guidance keys; when S&P/Yahoo fiscal_year or calendar end differs, add a parenthetical or sibling field (calendar_end / sp_fiscal_year). Never rename company FY solely because the year ends in the next calendar year.

Nested objects under guidance / qualitative_outlook / capital_returns (or any structure with a `value` field that involves interpretation) should include non-empty `rationale` (how extracted/interpreted) so machine checks and audit can rehydrate — not bare value-only judgment shells.

Then fill evidence_log: for each notable change vs prior trend, record metric / observation / materiality (is it >5% relative or >100bp? use YoY basis) / suggested_rule (two_quarter_rule | guidance_change_rule | inflection_rule | capital_rule | new_risk_rule | cash_conversion_rule | destock_rule | none) / source.

You log EVIDENCE ONLY. Do not change valuation assumptions — that is the valuation agent's job.
Write S/registry/latest_quarter.json and S/registry/handoffs/2d_latest_quarter.md.
```

---

## Phase 1c — year-readers + Agent 2e merger

Run after 2b (needs `S/data/raw_sec/`). Year-readers may run **in parallel with 2d**. 2e merge runs after all year-files pass excerpt-in-source. Prefer 2a `sp_financials.csv` for actuals when 2e grades promises.

Orchestrator: list annuals with `python3 -c "from packages.kd_research.annuals import list_annuals; ..."` (or equivalent). Spawn **one year-reader per annual** (N on disk; typically 3, 5 when depth/intensity warrants and 2b stored them). Do **not** paste any 10-K into the parent or into a year-reader prompt.

### Agent 2e-year — single annual (`coder`)

```text
You extract ONE fiscal year's annual report for TICKER (session S). You do not write filing_deep_dive.json.

Anti-role: no other years, no valuation, no transcripts, no promise_vs_actual.py, no multi-year narrative, no WACC/FV, no library_bind, no paths outside S/data/raw_sec. Cross-year joins are Agent 2e's job.

Read first: S/registry/sector_config.json, S/registry/market_context.json (ownership depth for THIS filing), ROOT/harness/filing_deep_dive.md checklist, ROOT/harness/schemas/filing_year_dive.schema.json.

HOW TO READ (mandatory):
- Open only the cleaned .txt for YOUR year under S/data/raw_sec/ (path injected by orchestrator). Refuse any path not under S/data/raw_sec/. Never feed .htm. Never paste the whole file into chat.
- Section-walk with line-range reads and search only. Recite unread required sections as you go.
- Required sections_walked ids: business, risk_factors, legal, md_and_a, notes, related_party.
- Helpers allowed on THIS file only: ROOT/packages/kd_research/note_extract.py.

Extract:
1) footnotes.items — same checklist as FDD (revenue_disaggregation, segment, sbc_unrecognized, debt_leases, contingencies_legal, income_taxes, capex_commitments, related_party_dual_class). Status extracted|missing|not_applicable|partial. Excerpt ≤800 chars MUST be a real substring of the source path. Missing is allowed; silence is not.
2) priorities[] and outlook_promises[] for THIS year only (do not grade vs later actuals).
3) risk_factor_themes[] from Item 1A (or local equivalent).
4) key_figures[] — at least one; each needs value + excerpt + source_path inside this year's file.
5) Related-party / control / dual-class / VIE: required extract attempt; status=missing if absent.

Write S/registry/raw/fdd_year_FY{yyyy}.json per the year-dive schema and S/registry/handoffs/2e_fy{yyyy}.md.
Return to parent: path + 5–8 bullets. No filing dump.
```

### Agent 2e — merger (`coder`)

```text
Merge year-dives into filing_deep_dive.json for TICKER (session S). You are the SINGLE writer of that file.

Role: merge + numeric rehydration + transcripts + ownership fail-closed.
Anti-role: do not re-read five full 10-Ks; do not invent numbers; do not mark FDD quality PASS (Agent 13); do not paste filings into chat.

Read first: all S/registry/raw/fdd_year_*.json, S/registry/sector_config.json, S/registry/market_context.json, S/registry/data_fetch_log.json, S/data/sp_financials.csv (if present). Methodology: ROOT/harness/filing_deep_dive.md.
Helpers: ROOT/packages/kd_research/excerpt_check.py (must pass or gap+drop); ROOT/packages/kd_research/promise_vs_actual.py (YOU only — year-readers must not have used it); note_extract.py for targeted re-reads.

Before merge: every year-file must pass excerpt-in-source (excerpts/key_figures are substrings of their path). If a figure fails, put it in sources.gaps and do not copy it into FDD.

Build S/registry/filing_deep_dive.json per ROOT/harness/schemas/filing_deep_dive.schema.json:
1) footnotes.items from the LATEST year; attach YoY deltas when year-files disagree. Same checklist. If market_context.ownership.complexity or intensity is medium/high, related_party_dual_class (and VIE/control/SOE/family) MUST be enriched from year-files + targeted raw_sec re-read — not a bare status with empty value. Note non-US-GAAP accounting-regime traps when relevant.
2) strategy_arc from per-year priorities. years_covered MUST match the year-dive fiscal years. continuity {value, rationale, basis}; pivot_flags; capital_allocation_story; implied_model_hooks.
3) management_scorecard — join this-year outlook_promises to later actuals via promise_vs_actual.join_promises_to_actuals. source_type filing|transcript|filing+transcript. credibility_summary + hit_rate_quantitative when n≥1 quantitative met|beat|miss.
4) sources.filings + sources.transcripts (required key) + sources.gaps + sources.year_dives (paths).
5) verify_rechecks[] — ≥3 {path, value} re-reads against data/raw_sec/ (prefer ≥3 per year when N is small). Merge must not introduce a new number.
6) Optional risk_factor_delta from year-file themes.

TRANSCRIPTS (secondary; after year merge):
- Read only S/data/transcripts/*.txt (already bound into S). Do not list or open other transcript trees. Do not write extract_sidecars.py.
- Write data_fetch_log.transcript_freshness: checked_at, latest_period (from latest_quarter / latest 8-K vs session transcript names), fetched_new. Unchecked is FAIL; missing after a recorded fetch attempt degrades scorecard (not 1c FAIL).
- Required window = last **8** unique periods already in S. Fetch only session_missing slots for that window (usually the latest call). Convert with ROOT/packages/kd_research/doc_text.py; copy into S/data/transcripts/. Do not fetch library_gaps (older holes). Orchestrator may ingest new S files later; you do not need to.
- If none and fetch fails: sources.transcripts status=missing, scorecard data_quality degraded_no_transcripts or partial; never invent quotes.

Write S/registry/handoffs/2e_filing_deep_dive.md (verify re-checks, dropped worker figures, ownership treatment).
```

---

## Phase 1d — operating-path evidence (after 0+1b; before Agent 5)

New runtime (`harness_version` ≥ 2.6.0). Workers are **gather-only**. They must **not** write `valuation_model.json` or an adopted 8-year forecast. `1d_merge` is the single writer of `registry/operating_path_brief.json`. Agent 5 still writes growth/OM paths.

Sector-adaptive: remaps for banks (NII/fees/efficiency), REITs (NOI/FFO), insurers (premium/combined), utilities (rate base). A lens may be `not_applicable` with rationale.

### Agent 1d_rev — company growth facts (`coder`)

```text
Gather COMPANY growth facts for TICKER (session S). Anti-role: do not emit an FY+1…FY+8 YoY path; do not value the stock.

Read: S/data/sp_financials.csv, S/registry/latest_quarter.json, S/registry/sector_config.json, S/registry/filing_deep_dive.json if present (scorecard/strategy only; optional on harness ≥ 3.0.0). If S/registry/street_estimates.json exists, cite it as the **Y1 hint** (next-year consensus vs run-rate). Do not fetch Street (no network). Destock analog years and whether **this** print matches (price/ad, AR/inventory, CFO — not capex-crushed IR FCF).

Write and run S/data/compute/revenue_growth.py (hermetic; historical CAGRs from the CSV). Persist S/registry/raw/oppath_rev.json per ROOT/harness/schemas/oppath_worker.schema.json (lens=revenue_growth): findings, sources, destock analog years, `current_print_is_destock`, guide vs run-rate, mix/organic vs M&A. Handoff S/registry/handoffs/1d_rev.md.
```

### Agent 1d_ind — industry / cycle facts (`coder`)

```text
Gather INDUSTRY/cycle facts for TICKER vs this print. Anti-role: do not emit a company growth path; do not restart a Phase 0 TAM essay from zero.

Read: S/registry/background.json, S/registry/latest_quarter.json, S/registry/research_brief.json, sector module. Require, with sources or explicit missing→widen: industry capex vs history, utilization or book-to-bill analog, named competitor supply response, destock vs end-demand, dated **units** (not consultant dollar TAM). Do not write a TAM/SAM/SOM paragraph. Network only to fill `named_gaps[]`. Persist `background_round_ids` or `named_gaps`. Node ramp vs destock is one example, not the whole lens.

Write S/registry/raw/oppath_ind.json (lens=industry_trend). Handoff S/registry/handoffs/1d_ind.md.
```

### Agent 1d_ol — operating-leverage facts (`coder`)

```text
Gather HISTORICAL operating-leverage facts for TICKER. Anti-role: do not read 1d_rev’s forecast; do not emit an OM path for the explicit forecast.

Read: S/data/sp_financials.csv, S/registry/latest_quarter.json. Script ΔOI/Δrev, GM/OM vs revenue, opex%/R&D floor, GM−opex identity, management GM vs OM targets.

Write and run S/data/compute/operating_leverage.py. Persist S/registry/raw/oppath_ol.json (lens=operating_leverage). Handoff S/registry/handoffs/1d_ol.md.
```

### Agent 1d_merge — brief writer (`coder`)

```text
Merge 1d workers into S/registry/operating_path_brief.json (SINGLE writer). Anti-role: do not invent numbers; do not bind Agent 5 paths; do not average two growth or OM series.

Read all S/registry/raw/oppath_*.json. Persist they already exist. If S/registry/street_estimates.json exists, map Street vs company run-rate/guide into conflicts[] or hints — still **non-binding numbers**; do **not** average Street with destock into one CAGR. Build per ROOT/harness/schemas/operating_path_brief.schema.json: sources.workers (3 paths), conflicts[] (flatten vs destock stays unresolved if both evidenced), `analog_class` (`inventory_channel` | `advertiser_budget` | `none`), `current_print_is_destock` (this print), scenario_hints (if destock and duration are both evidenced: Street FY+1 is a **prior**, destock analog in **bear** unless `current_print_is_destock` — Agent 5 decides per §10c; destock-in-base is legal only when analog_class is set **and** current_print_is_destock=true; capex-crushed IR FCF is not destock-math), rejected_shapes[], recommended_for_agent5 (qualitative; any illustrative path labeled non-binding), verify_rechecks[] ≥3 against CSV/LQ/raw.

Handoff S/registry/handoffs/1d_merge.md.
```

Orchestrator: `preflight --phase 1d` before workers; `preflight --phase 1d --mode complete` before flipping 1d complete / spawning 1e.

---

## Phase 1e — story lock (after 0+1b+1c+1d; before Agent 5)

Harness ≥ 3.4.0. Spawn `story` first, then `3p`. Do not spawn Agent 5 until `preflight --phase 1e --mode complete`. Agent 5 does not write `narrative_bind.json`.

### Agent story — narrative writer (`coder`)

```text
Write the investor's story for TICKER (session S). Anti-role: do not compute a DCF; do not write valuation_model.json; do not change classification.json.

Read: S/registry/classification.json (REQUIRED — identity; do not copy playbook/stage/buyer/contest onto this bind; do not reclassify), S/registry/research_brief.json, S/registry/background.json, S/registry/latest_quarter.json, S/registry/filing_deep_dive.json, S/registry/operating_path_brief.json, S/registry/sector_config.json (KPI only), S/registry/market_context.json. Open ROOT/ref/Investment Valuation/knowledge-hub-narrative/00-router.md then process/build-story.md, 3p-test.md, map-inputs.md. Do not start in extracts/.

Write S/registry/narrative_bind.json per ROOT/harness/schemas/narrative_bind.schema.json:
- story.paragraph (>=20 chars, novice-restatable, beginning-middle-end)
- map keys MUST be story carriers: tam, share_path, slice, target_om, tax_path, sales_to_capital, kc_path, p_fail, tv_form, stable_roc_vs_kc (at least 3). Values are story sentences, not model field names.
- Do not write 3P buckets (the critic owns narrative_3p.json). Do not copy classification stamps.
- evidence_hooks: one row per required finding id (`fdd.<material_key>`, `fdd.strategy_arc`, `oppath.brief`, `oppath.conflict.<id>`). action=map (with map_key) or action=reject. `from` must equal the id. noted_only is illegal.
- stage_fit (>=40 chars): why THIS paragraph matches classification.life_cycle_stage
- street_restory when street_estimates.json exists (will_own true/false)
- When classification.iv_playbook is contingent_claim or overlays include real_options: write option_screens (exclusivity/materiality/no_double_count all true + rationale). When overlays include distressed_call: write distressed_call (dcf_equity_near_zero and replaces_dcf_equity true). These overlay screens live on the bind, not on classification.json.

Handoff S/registry/handoffs/story.md.
```

### Agent 3p — 3P critic (`coder`)

```text
Grade the story lock for TICKER. You are the evaluator, not the author. Anti-role: do not rewrite story.paragraph; do not compute FV; do not reclassify the engine.

Read S/registry/narrative_bind.json (must exist), S/registry/classification.json, the same gather files the story agent used. Open ROOT/ref/Investment Valuation/knowledge-hub-narrative/process/3p-test.md, checks/fairy-tale.md, iron-triangle.md, life-cycle-fit.md.

Write S/registry/narrative_3p.json only per ROOT/harness/schemas/narrative_3p.schema.json: verdict PASS|FAIL; non-empty possible/plausible/probable; fairy_tale; wrong_stage; iron_triangle pass|fail; rationale; required_edits on FAIL. Do **not** write narrative_bind.json. Lock is verdict=PASS.

On FAIL: list required_edits. Orchestrator may respawn story (max 2 loops) then stop as too_hard.

Handoff S/registry/handoffs/3p.md.
```

Orchestrator: `preflight --phase 1e` before story; `preflight --phase 1e --subagent 3p` before the critic; `preflight --phase 1e --mode complete` before Agent 5.

---

## Phase 2 — Modeling (launch 4, 5, 12 in parallel)

### Agent 4 — technical analysis (`coder`)

```text
Technical analysis for TICKER as of DATE. You must NOT read any fundamental artifact (no valuation model, no filings, no background, no news, no street_estimates / street_bind, no classification / narrative_bind / narrative_3p, no operating_path_brief / oppath_* / revenue_growth / industry_trend / operating_leverage, no library_bind / archive/library). Price/volume data only. The orchestrator will tell you the latest earnings DATE (date only, no content) so you can note any price gap around it.

Fetch ~2 years of daily prices for YAHOO_QUOTE_SYMBOL (`S/meta/run_manifest.json` `quote_symbol`; may differ from TICKER), the regional benchmark, and the sector index declared by the orchestrator (deviate only with rationale) via the yfinance MCP (get_price_history) or yahoo_finance datasource. Cache them to S/data/prices_*.csv. If S/data/price_snapshot.json exists (price-only freeze from orchestrator), use its `close` as the session “last close” / current-price anchor for levels that need a single print; still use full history for indicators.

Write a runtime script S/data/compute/technical_indicators.py that READS the cached CSVs (fetches only if absent) and computes: trend (SMAs), momentum (RSI, MACD), volatility (ATR), volume profile, relative strength vs both benchmarks, support/resistance, max drawdown. Run it.

Then YOU decide: `side` = long | short | **pass**. Pass is legal — do **not** invent a buy entry to fill the schema. If side=pass, omit entry/stop or leave levels empty. If side=long, stop-loss must be below entry; if short, stop must be above entry. ATR-based sizing (state the account-risk assumption) is an optional overlay, not a duration-book size. If your highest-probability near-term scenario is a pullback **and** you are taking a long, set the entry where that scenario says to buy.

Write S/registry/technical.json per ROOT/harness/schemas/technical.schema.json, including compute_script path and `side`.
```

### Agent 5 — valuation (`coder`)

**Anti-anchoring:** Derive FV/MoS/probs only from **this session** (`S/data`, `S/registry`, compute scripts). Bound filings are `S/data/raw_sec/*.txt` — do not follow `library_bind` `library_text` paths or re-download annuals. Do **not** open or target other `archive/research/<TICKER>/<other_session_key>/` valuation models, snapshots, or report verdicts to “stay consistent” with a prior run. Same-session upstream is 2a–2e + 1d + 1e (`classification.json` + `narrative_bind.json` + `narrative_3p.json` PASS) + street_estimates (when present). Agent 4 is isolated; Agent 12 is **parallel** — do not wait for TSR. If `S/registry/tsr_validation.json` already exists, read it and you may write `tsr_hooks[]`; do not block the DCF on Agent 12. Compute TTC ROIC from `S/data/sp_financials.csv` + FDD yourself. Prior-day research is not an input.

```text
Value TICKER as of DATE.

Role: model designer + assumption judge. Anti-role: not a module-default paste machine; not a self-auditor.
Load current policy: ROOT/harness/RESEARCH_AGENTS.md §10c (Street/Y1 + destock), §10d (ROIC), §10e (WACC). Do not restate those sections here. Do not load ROOT/harness/law_history.md (Agent 13 only, version-banded). On harness ≥ 3.4.0: **compute only.** Read S/registry/classification.json (identity) and S/registry/narrative_bind.json (story + map) and S/registry/narrative_3p.json (must be PASS). Do **not** write narrative_bind.json. Do **not** reclassify. Open the ref recipe `valuation_router.md` names for classification.iv_playbook and each overlay. Write valuation_model.story_input_bind mapping every narrative_bind.map carrier to a real model input name. Write valuation_model.buyer_dials from classification.buyer.class (illiquidity_discount=0 for a public diversified buyer; total_beta + discount >0 for private_undiversified; ke_stepdown for vc_pe). Do **not** re-walk FDD or operating-path into filing_deep_dive_hooks / operating_path_hooks — 1e evidence_hooks already consumed them. Sector/region modules are KPI/stress — not the engine.
Judgment style: read ROOT/harness/exemplars/rationale_quality.md, hooks_quality.md, and valuation_decision_quality.md (GOOD patterns; do not copy illustrative numbers). Schema: ROOT/harness/schemas/valuation_model.schema.json.

Inputs: S/registry/classification.json (REQUIRED on ≥ 3.4.0), S/registry/narrative_bind.json (REQUIRED on ≥ 3.4.0), S/registry/narrative_3p.json (PASS), S/registry/sector_config.json, S/registry/market_context.json (REQUIRED for new sessions), S/registry/research_brief.json (when present), S/registry/latest_quarter.json (read cash_quality when present — you do not write it), S/registry/filing_deep_dive.json (REQUIRED), S/registry/operating_path_brief.json (REQUIRED on harness ≥ 2.6.0), S/registry/street_estimates.json (REQUIRED on harness ≥ 2.7.0 unless data_fetch_log records a Street fetch failure), S/registry/data_fetch_log.json, S/data/sp_financials.csv, S/data/peer_comparison.csv, S/registry/background.json, sector module in sector_config.module_file, region module in market_context.module_file (both advisory). Prefer S/data/price_snapshot.json for current price / MoS when present (orchestrator freezes it before Phase 2). Fill peer KPI gaps from S/data/raw_sec, FDD, or sec_filings.json — if still missing, handoff + widen; do not re-fetch annuals. 1d workers are evidence only — YOU write growth/OM paths from the locked map. Do not average flatten-vs-destock.

PREFLIGHT (stop → handoff status=blocked; do not invent):
- registry/classification.json exists; narrative_3p.verdict=PASS.
- registry/filing_deep_dive.json exists with footnotes + strategy_arc + management_scorecard.
- Prefer S/data/price_snapshot.json for the single current_price used in MoS (if missing, document the price vintage you use and ask orchestrator to freeze next run).

Hard constraints:
- MoS = 1 − price/fair_value.base (signed). Write BOTH fair_value.margin_of_safety (fraction) AND fair_value.margin_of_safety_pct (100× fraction). Never put a 0–1 fraction in *_pct. Prefer compute script emits both. Primary MoS uses base; disclose vs probability_weighted if material.
- Every decided number {value, rationale, basis}; any number in rationale must equal value / script input or state haircut old→new (see valuation_decision_quality congruence pair).
- Scenario weights: no template paste (e.g. 30/45/25 or 25/50/25) without company-specific numeric argument AND a counterfactual mass; set probability_method. Template-shaped masses are allowed when justified. On harness ≥ 2.9.0 the machine FAILs the template without both. risk_bridge mirror = bare bear/base/bull floats only.
- Wide cone: if (bull−bear)/base > 100% or bear < 0.4×base, write fair_value.decision_usefulness (high|medium|low). Machine FAIL if omitted on ≥ 2.9.0.
- ERP / CoC: intermediates scripted + snapshotted under data/ when used; ERP rationale selects a method and rejects ≥1 competitor unfit for this currency/risk (not “mid of band” alone). No mandated ERP value. Definitions: valuation_decision_quality.md.
- priced_for_perfection is a surface reverse-eng claim (name dials that justify price vs base/bull) — never from PW vs price×k or price>base alone. Invert the **Street/print Y1 path** (the tape’s implied company), not a destock DCF. PFP=false does not license `initiate`. Write `reverse_engineering.path_inverted` as `street_y1` | `destock` | `other` when present.
- Do not invent FDD/hooks if deep dive missing.

1. READ the locked engine. Use classification.iv_playbook and overlays as given. Do **not** stamp a different playbook. Sector module is KPI/stress only — do **not** take NAV, ARR, TTC×EBIT, or exit multiple as `fair_value.base`. Empty `module_file` → ordinary DCF **only when §5 already chose `standard`** and the router row is `mature_operating`. Do not paste growth-module decay tables. If the locked map already carries a cyclical overlay, honor it; do **not** rewrite `primary_sector` / `module_file` (branded CPG stays standard; F21). Still honor `research_brief.must_cover_risks` / Phase 0 `risk_candidate` stress seeds. Do not treat one peak year or one trough quarter as mid-cycle. Material multi-line businesses → SOTP or multi-method cross-check; if so, write multi_method_reconciliation (primary_fv_for_decision, cross_check_fv, delta_pct, why_primary_wins, what_would_flip_primary). Never average/blend DCF and a multiple. Justify in model.rationale. Write `story_input_bind`.
1b. MARKET CONTEST is already on classification.json — do not rewrite it. Still interrogate a large FV-vs-price gap (model, then inputs) before claiming mispricing; `reverse_engineering` names the dials the tape implies. If classification.iv_playbook is `contingent_claim`, honor `option_screens` on the bind if present. If distressed_call screens already passed, the call **replaces** DCF equity, never adds to it. Write `buyer_dials`.
2. DECIDE every assumption: discount rate build-up (cash-flow currency vs discount-rate currency match or explicit FX policy; beta/Rf series scripted), growth/margin paths, terminal approach, CoC/governance dials (may be 0). Each {value, rationale, basis}. Write `terminal_consistency` (required on ≥ 3.1.0): method is Gordon / liquidation / excess_return (financials), never exit/ARR/NAV. Include wacc_minus_g or ke_minus_g, reinvestment/payout identity, tv_share_of_ev_base; if TV share >0.75 extend years / lower terminal / widen range. Write the truncation assessment (≥ 3.3.0): `truncation` is required — p=0 with `why_not_material`, or p>0 with the weighted base. Write `per_share_bridge` (≥ 3.3.0). On `wacc_buildup` (≥ 3.3.0) set `erp_method` (implied default; `not_applicable` illegal while applies=true; historical needs `erp_reject_implied_reason`), `beta_method` (bottom_up default; `not_applicable` illegal while applies=true; otherwise `beta_reason`), and `discount_currency`/`cash_flow_currency` (match or `fx_policy`). Optional `pricing` object for NAV/ARR/TTC×EBIT/exit multiple — labeled price, not the decision number. Footnotes for SBC/dilution, tax, debt/leases, segments when extracted. NEVER paste region-module ranges as mandated WACC/ERP/family discounts.
2b. Write `roic_identity` per §10d (schema + valuation_decision_quality.md ROIC pair). Agent 12 is not this identity.
2c. Write `wacc_buildup` per §10e. Do not paste a WACC/ERP/Kd number.
3. Apply latest-quarter overrides from evidence_log when warranted (materiality >5% relative or >100bp; symmetric). Log overrides_applied; note rejects. Use company FY labels consistent with Agent 2d. A two_quarter_rule that **raises** Y1 volume/growth while FCF is negative and AR/inventory are deteriorating must be `bear_only` or rejected (harness ≥ 2.11.0 WARN). The destock inverse (harness ≥ 2.12.0 WARN): a raise while a destock conflict is live and FCF is ≥0 with inventory/AR **down** (WC release) must be `bear_only` or rejected — positive FCF is not a clean bill of health.
4. On ≥ 3.4.0 do **not** write filing_deep_dive_hooks[] — 1e evidence_hooks already mapped or rejected each material FDD id. Honor those rejects in the forecast. Credibility may still move weights/range width — not formulas. Degraded scorecard → widen range and say so. Scorecard **beat is not a hit** for `trust_guides_more` unless you also report a met-only and/or cash/organic quality split (harness ≥ 2.11.0 WARN). On < 3.4.0: CONSUME deep dive → filing_deep_dive_hooks[].
4b. CONSUME market context → market_context_hooks[]. intensity=low: single noted_only OK. medium/high: local CoC + ownership/accounting addressed (use or reject). Manual review / conf<0.70 → widen. Avoid double-counting country risk across WACC/CF/stress.
4c. When research_brief exists: research_brief_hooks[] for open must_answer_questions (used_as:range|probs|scenario_seed | unanswered_widens_range | not_material).
4d. On ≥ 3.4.0 do **not** write operating_path_hooks[] — 1e evidence_hooks already mapped or rejected `oppath.brief` and each conflict. Destock-in-base vs Street: §10c (do not restate here). On < 3.4.0: operating_path_hooks[] not all noted_only.
4e. Write street_bind + street_hooks when street_estimates.json exists. Policy: §10c. Conservatism_dials and SOTP/DCF multi_method_reconciliation: schema + §10c.
5. Write S/data/compute/valuation.py (session-relative), hermetic from session files, run it; JSON matches script output. Emit dual MoS from the script when possible. On harness ≥ 2.44.0 the script MUST define `fair_value_under(overrides)` and accept `--under '{...}'` printing `{"fair_value": <float>}` without rewriting valuation_result.json. Overrides are **replacement** values for named dials (missing keys = current). `fair_value_under({})` equals fair_value.base. Write `shock_surface.dials` as `{<name>: {value, lo?, hi?}}`. The 4×4 grid is display, not the stress engine. Policy: RESEARCH_AGENTS.md §10f.
6. SENSITIVITY: ~4×4 on two most judgment-dependent dials; base cell = base FV. fair_value.posture one sentence (conservative|neutral|aggressive lean). If the stack leans conservative, say so — a conservative **stress** must not be labeled base.
7. Reverse-engineer current price (implied dials, full grid not only extremes). Set reverse_engineering.priced_for_perfection per valuation_decision_quality (surface claim).
8. MoS dual fields (step constraints). Scenario probs justified + probability_method. If (bull−bear)/base >100% or bear <0.4×base: set fair_value.decision_usefulness high|medium|low + what would shrink range — do not present PW as precise when low.

Also write S/registry/decision.json per ROOT/harness/schemas/decision.schema.json (harness ≥ 2.10.0): duration.action in initiate|add|hold|trim|sell|short|pass|too_hard plus rationale ≥20 chars. **pass/too_hard** are first-class. initiate/add are illegal when decision_usefulness=low or (bull−bear)/base >100% or bear < 0.4×base. Do not emit a duration long while calling the cone decision-useless. On harness ≥ 2.14.0 this Phase 2 write is **provisional**: set `reopened_after_stress: false` and `tsr_seen: false`. Do not wait for Agent 12 or risk_bridge here (they are parallel / later). After Phase 2.5 the **orchestrator lead** runs the 5b block below — do **not** spawn subagent 5 inside phase `2_5`.

OUTPUT CONTRACT — write S/data/valuation_model.json per ROOT/harness/schemas/valuation_model.schema.json including: model, fair_value (bear/base/bull/PW + dual MoS), assumptions, compute_script, sensitivity, market_context_hooks (when MC present), street_bind + street_hooks (when street_estimates present), conservatism_dials (required on harness ≥ 2.7.0), reverse_engineering; plus **on ≥ 3.4.0: `story_input_bind` + `buyer_dials` (do not write narrative_bind)** / on < 3.4.0 filing_deep_dive_hooks + operating_path_hooks + narrative bind (`iv_playbook`; story/map/3p) / terminal_consistency (required on ≥ 3.1.0; Gordon/liquidation/excess_return; a present `truncation` block with `p>0` must write `fair_value.base = (1−p)×GC + p×failure` on ≥ 3.2.0) / optional pricing column (≥ 3.2.0: `used_as`/`role` is a closed price-only set — `cross_check | relative_reference | sanity_check | reference_only`) / multi_method_reconciliation (required when SOTP and DCF both run) / research_brief_hooks / decision_usefulness / probability_method when triggered / **roic_identity (required on harness ≥ 2.8.0)** / **wacc_buildup (required on harness ≥ 2.40.0)** / **explicit_forecast (required on harness ≥ 2.43.0)** — copy the script's year-by-year path (revenue / operating profit / margin / capex / FCFF or native analog arrays) for bear/base/bull; `applies:false` + `not_applicable_reason` ≥40 chars + `native_analog` when the model is not a path. Same floats as `data/compute/valuation_result.json` (rounding is display-only). Fair-value weights become risk_bridge scenario_probabilities (bare floats only; consistent). **shock_surface.dials (required on harness ≥ 2.44.0)**. On ≥ 3.3.0 also: `truncation` assessment, `per_share_bridge`, and `wacc_buildup.erp_method`/`beta_method`/`discount_currency`/`cash_flow_currency`; `narrative_bind` `life_cycle_stage`/`who_leads`/`stage_fit`/`buyer`/`market_contest`/`option_screens`/`distressed_call` as applicable.

SELF-CHECK before handoff: (1) abs(pct − 100×frac) < 0.05; (2) ≥3 rationales rehydrate values; (3) terminal_consistency present; method Gordon/liquidation/excess_return; on ≥ 3.4.0 classification.iv_playbook is the engine, story_input_bind maps every carrier, buyer_dials match classification.buyer.class, narrative_3p.verdict=PASS, and you did not write narrative_bind; on < 3.4.0 `iv_playbook` stamped on the bind; any `truncation` block with `p>0` writes `fair_value.base = (1−p)×GC + p×failure` (no `material` flag); (4) PFP names dials or explicit FALSE with dial evidence; (5) ERP/method competitor named if CoE used; (6) street_bind / roic_identity / wacc_buildup match §10c–e and the schema; (7) explicit_forecast Y1 revenue (or native KPI) matches the compute result; (8) shock_surface.dials have current values and `--under {}` equals base FV (§10f); (9) on ≥ 3.3.0 `truncation` is answered, `per_share_bridge` is present, and wacc_buildup has erp_method/beta_method/discount_currency/cash_flow_currency.
Write S/registry/handoffs/5_valuation.md.
```

**5b — decision reopen (orchestrator lead, after Phase 2.5):** Load RESEARCH_AGENTS.md §8 **5b** and §10f. Run `python -m packages.kd_research.stress_apply --ticker T --date D --skip-apply --bind-print`. Write that `stress_bind` object onto `decision.json` only. Change `duration.action` only when `size_cap=0` forbids the verb. Do not rewrite FV or `risk_bridge.json`. Do not spawn subagent `5` in `2_5`. Optional handoff `S/registry/handoffs/5b_decision_reopen.md`.

### Agent 12 — TSR & dilution validation (`coder`)

```text
Validate TICKER's historical shareholder returns and dilution as of DATE — this is the value-trap screen.

Fetch price history (5-10y) and dividends for YAHOO_QUOTE_SYMBOL (`S/meta/run_manifest.json` `quote_symbol`; may differ from TICKER) and the benchmarks declared by the orchestrator (deviate only with rationale) via yfinance MCP or yahoo_finance datasource; cache to S/data/prices_tsr_*.csv (or reuse prices_*.csv if the technical agent already cached the same tickers). If S/data/price_snapshot.json exists, use its `close` as the session current-price print for headlines; historical TSR still from cached series. Get share-count history, SBC, and buybacks from S/data/sp_financials.csv (fallback: yfinance, cached).

Write and run S/data/compute/tsr_dilution.py (READS cached data; fetches only if absent) computing: TSR over 1/3/5/10y vs benchmarks, share-count CAGR, compound dilution/buyback effect, SBC % revenue, SBC-adjusted FCF. For growth/is_also_growth names (check S/registry/sector_config.json): also Rule of 40 and Burn Multiple — CRITICAL intensity for them; otherwise note why SBC treatment is light.

Then assess value-trap flags yourself (e.g. TSR vs fundamental growth gap, return-on-capital trend vs cost of capital, buyback effectiveness at the current multiple). Each flag: status pass/warn/fail/unknown with evidence. Never assert a pass without computed evidence. `roc_vs_cost_of_capital` is a **historical screen** (label CoC as a floor, not Agent 5 WACC). Do not require `valuation_model.json` — Agent 5 is parallel and owns the owner-earnings identity. On harness ≥ 2.9.0 a `fail` here **binds** the cheapness claim: `franchise_mos` is illegal unless Agent 5's same-script `quality_bucket=above_wacc`.

Write S/registry/tsr_validation.json per ROOT/harness/schemas/tsr_validation.schema.json, including compute_script.
```

---

## Phase 2.5 — stress-test swarm

### Agent phase25_swarm

`AgentSwarm`, subagent_type `coder`, 5 items: the 4 most relevant sector scenarios (from the sector module's stress library — adapt to the company) + 1 macro scenario. When `sector_config.module_file` is empty (`standard`), still seed ≥1 company-specific stress from `research_brief.must_cover_risks` / Phase 0 `risk_candidate` (protein-price, HPAI, oversupply, feed-cost, price-gap overlays are allowed on a staple). Also add any scenario required by a `new_risk_rule` evidence entry. When S/registry/market_context.json has intensity `high` **or** research_brief.research_depth is `deep` with material region/ownership flags, at least one of the five must be region/governance/FX/policy (from the region module stress seeds or company-specific) and it must be **material** (not a checkbox narrative); when intensity is `medium`, include one if material. Also fold Phase 0 findings tagged `downstream_relevance=risk_candidate` that are still open. (If you judge a different 5-scenario mix more decision-relevant, deviate — and record the deviation with rationale in risk_bridge.json.) Machine gate remains **≥5 scenarios**. One worker per scenario; no nested swarms.

prompt_template:

```text
Stress scenario for TICKER: {{item}}

Inputs: S/data/valuation_model.json, S/registry/sector_config.json, S/registry/market_context.json (intensity, ownership, accounting — use for region/governance/FX scenarios; do not invent folklore EM haircuts), S/registry/latest_quarter.json, S/registry/filing_deep_dive.json (footnotes contingencies/legal, risk_factor_delta, management_scorecard credibility pattern — use filing/transcript-labeled facts before web legal dollar claims), S/registry/background.json risk_candidate themes, S/registry/research_brief.json if present.

Return JSON only (do not write files). Decision-grade: narrative is 2-4 sentences on transmission mechanism — not a raw data dump. Paths/refs beat pasted footnotes.

{"name": "...", "type": "sector|macro|region",
 "probability": <0-1 number YOU decide>, "rationale": "<why this probability — reference history/base rates/company specifics; cite deep-dive or filings when legal/contingent>",
 "shock": {"<dial>": <replacement value, not a delta>},
 "affected_parameters": ["dials in shock"],
 "liquidity_path": {"applies": true|false, "survival_12m": true|false|null, "notes": "..."},
 "overlaps": ["optional other scenario names that are the same movie"],
 "narrative": "<2-4 sentences: transmission mechanism and impact>",
 "deep_dive_refs": ["optional paths into filing_deep_dive.json used"],
 "market_context_refs": ["optional paths into market_context.json used"],
 "background_risk_refs": ["optional phase0 risk_candidate themes this scenario covers"],
 "historical_anchor_source": "primary path/URL or unverified_estimate"}
Probability semantics: this is a STANDALONE conditional estimate of this event occurring. Scenarios are NOT mutually exclusive and do NOT need to sum to 1.0. Check any historical anchor you cite (e.g. trough multiples in past crises) against the actual historical record — if unverified, set historical_anchor_source=unverified_estimate and do not claim "matching actual trough".
Do **not** guess `fair_value_haircut_pct`. Haircut is derived by `fair_value_under` after merge (`python -m packages.kd_research.stress_apply`). Shock values **replace** current `shock_surface.dials` (not deltas). Unknown legal quantum → do not shock; monitoring only. A legal/contingent **dollar** claim must cite FDD `contingencies_legal` (deep_dive_refs) or set unknown. Do not web-research TAM/moat/management/destock. Do not apply a fixed family-control or country discount from a region module.
```

**Merge protocol (main agent):** Role: risk-bridge assembler — not a co-author of new haircuts. (1) write each verbatim return to `S/registry/raw/stress_{id}.json`; (2) merge **shocks only** into `S/registry/risk_bridge.json` per `harness/schemas/risk_bridge.schema.json`: `risks` (every `latest_quarter.json.risks[]` entry must map to a risk here or be explicitly dropped with a reason; fold material deep-dive legal/contingency findings into risks or explicit drops; Phase 0 `risk_candidate` findings map or explicit drop), `scenario_probabilities` (**ONLY** keys `bear`, `base`, `bull` with numeric values summing to 1.0 — mirrors valuation weights; put any rationale/note/_sum in a sibling such as `scenario_probabilities_rationale`, never inside the probability map), `stress_test.probability_semantics` (standalone-conditional convention), `stress_test.scenarios` (`shock`, `liquidity_path` — no guessed haircut); (3) run `python -m packages.kd_research.stress_apply --ticker T --date D` so Apply walks the merged scenario list and writes one `applied` block per row (plus `reverse_stress` via `fair_value_under`). Raws stay the gather archive. Spot-check `applied.fair_value_haircut_pct` against `1 − applied.stressed_fv/base`. Coverage checkpoint: ≥5 raw stress files + ≥5 merged scenarios. A scenario that would bind (`size_cap < 1` after `compute_stress_bind`) **must not** use `narrative_only`.

---

## Phase 3 — Agent 6 charts (`coder`)

### Agent 6

```text
Generate charts for TICKER session S.

Write and run S/data/compute/charts.py (matplotlib; use ROOT/vendor/mcp/yfinance-market-mcp/.venv/bin/python if system python3 lacks it). Read only session-cached data (prices_*.csv, valuation_model.json, risk_bridge.json) plus S/registry/decision.json (action only — do not rewrite FV). Produce at minimum:
- price_trend.png (1y price + volume, benchmark-relative)
- valuation_football_field.png (bear/base/bull FV, probability-weighted FV, current price — from S/data/valuation_model.json) — required when duration.action is initiate|add|hold|trim|sell|short; when pass|too_hard, omit the bid poster or draw range/floor vs price instead of a target. If `decision.stress_bind.size_cap < 1` and stressed_fv exists, mark stressed FV as a label (stress, not a bid)
- sensitivity grid heatmap from valuation_model.json sensitivity block; tornado uses derived haircuts from risk_bridge (not worker guesses)
- 1-3 sector-appropriate charts (e.g. capital-ratio trend vs requirement for banks, scenario tornado, SBC/dilution for growth)
Labels and titles in English, descriptive file names, cite data source on each chart.
```

---

## Phase 4 — reports (launch 7, 8, 11 in parallel)

### Agent 7 — fundamental report (`coder`)

```text
Write S/reports/01_TICKER_fundamental.md.

Read: all of S/registry/ (sector_config, market_context, research_brief when present, background, sec_filings, filing_deep_dive, news_sentiment, latest_quarter, tsr_validation, risk_bridge, data_fetch_log), S/data/valuation_model.json, S/data/peer_comparison.csv, S/data/raw_sec/*.txt as needed. Skim sec_filings.json sections as needed; use filing_deep_dive.json for footnotes/strategy/scorecard (do not re-hallucinate from web when deep dive has primary excerpts). Do not re-download 10-Ks. Use market_context.json for listing/accounting/ownership/intensity (do not invent regional haircuts not in the valuation model).

Writing: follow ROOT/harness/exemplars/report_prose_quality.md. Short sentences. Everyday words. One idea per sentence. Lead with the product English duration label for `duration.action` (Do not initiate / Hold / … — same map as duration_label). The machine token may appear once as a source line, not the headline. Do not invent a second verb. Do not invent a third duration phrase the gate cannot recognize.

Structure:
- executive summary & verdict (product English duration label first; do not invent a second verdict)
- latest-quarter takeaways
- business & moat
- **Market & institutional context** (non-stub when intensity medium/high; one short paragraph no-op OK when intensity low): primary_region, intensity, accounting basis, ownership/control, how CoC/FX were framed — restate market_context_hooks that moved dials
- **Footnote findings** (non-stub): 3–8 bullets from filing_deep_dive.footnotes with sources — what changes dilution, tax, net debt, legal risk, segments
- **Multi-year strategy alignment** (non-stub): strategy_arc priorities by year, continuity, pivots, capital-allocation story
- **Management track record** (non-stub): scorecard table or bullets (promise → actual → outcome → source_type filing/transcript); credibility_summary implication for trusting current guides
- **Operating-path evidence** (non-stub when `operating_path_brief.json` exists): 1d recommended vs modeled growth/OM; flatten-vs-destock conflict; no averaged paths
- valuation (model choice + key assumptions WITH their rationales — restate them; INCLUDE sensitivity grid; restate filing_deep_dive_hooks and market_context_hooks that moved dials)
- **Forecast path** (non-stub; copy year-by-year revenue / operating profit / margin / capex / FCFF — or native analog — from `explicit_forecast` / `data/compute/valuation_result.json`, not mental math. Heading must be exactly `## Forecast path`. Base table required; bear and bull as tables or details. The composed website report will omit this section because it already paints the JSON grid.)
- **Unstressed vs stressed** (harness ≥ 2.44.0; heading must be exactly `## Unstressed vs stressed`). Copy `packages.kd_research.decision.format_stress_card`. Do not recompute. Put this card in the exec summary *and* as the lead of stress tests and of position-sizing input.
- five lenses (value, growth, contrarian, risk, technical-cross-reference)
- stress tests & risk bridge (lead with the card; quote reverse_stress; liquidity path)
- perspective conflicts
- bull-base-bear with probabilities and rationale
- position-sizing input (quote `size_cap` + kill trigger + liquidity path; never ATR)

Rules: every number cites a source (registry file, S/data/raw_sec path, or compute script). Web only for news URLs already in news_sentiment. Key judgment numbers must be restated with their rationale and must match registry/compute — **no chat-only or mental-math figures**. No new numbers that are not in the registry. MoS: restate dual units consistently (percent points for readers) using base FV as primary; if fair_value.decision_usefulness is low/medium, do **not** lead the valuation/verdict section with probability-weighted FV as a precise target — say the range is decision-limiting. When `roic_identity` exists: restate `quality_bucket`, dual-column EVs, and `cheap_claim.class` in the value lens. If cheap_claim ≠ franchise_mos, do **not** lead with MoS as a franchise gift (say equity ≈ book / residual option). Reconcile Agent 12 `roc_vs_cost_of_capital` in perspective conflicts — different stack, same question. If research_brief exists, note any still-open must_answer_questions and how uncertainty was widened. If the assumption stack leans one direction, disclose it. When two vintages of a metric exist (e.g. latest-quarter vs FY book value), use one consistently and say which. Label transcript-sourced claims as secondary.
```

### Agent 8 — technical report (`coder`)

```text
Write S/reports/02_TICKER_technical.md.

Read ONLY S/registry/technical.json and price data (S/data/prices_*.csv, technical compute outputs). Do NOT read fundamental artifacts.

Cover: trend/momentum/volatility summary, support/resistance, relative strength vs benchmarks, entry/stop/targets with rationale, ATR-based sizing, scenarios for the next 1-3 months (consistent with the entry/stop logic in technical.json), and the price gap around the latest earnings date (date/price action only, not content).
```

### Agent 11 — README (`coder`)

```text
Write S/reports/00_TICKER_README.md — the one-page summary.

Read S/registry/sector_config.json, S/registry/market_context.json (if present), S/registry/research_brief.json (if present), S/data/valuation_model.json, S/registry/latest_quarter.json, S/registry/risk_bridge.json, S/registry/technical.json, S/registry/tsr_validation.json.

Read S/registry/decision.json when present and lead the verdict with the product English duration label. Do not invent a second action. ATR share-count is not a cover position size.

Cover, in this order (harness ≥ 2.43.0 CIO page): (1) lead with the **product English duration label** for `duration.action` (Do not initiate / Hold / Initiate / Add / Trim / Sell / Short / Too hard — same map as duration_label) plus one-sentence why from `decision.rationale`. The machine token may appear once as a source line, not the headline. Do not invent a second verb. Do not invent a third duration phrase the gate cannot recognize.; (2) cheap_claim in product English (Franchise MoS / Equity near book / Residual option / Not cheap); (3) then **Unstressed vs stressed** (harness ≥ 2.44.0; heading exactly `## Unstressed vs stressed`) — copy `format_stress_card`. Do not recompute. When `fair_value.decision_usefulness` is **low**, lead with the **cone + pass**, not the point FV. When `size_cap < 1`, lead with the duration verb + this card, not the point FV. Then fair value vs price + margin of safety as **context** (illustrative going-concern, not a bid, when action is pass/too_hard or cheap_claim ≠ franchise_mos). (4) TA overlay side — not the duration book; (5) sector/market identity headers; latest-quarter headline; key risks (top 3); required inputs AS EXECUTED; data-quality notes; pointer to the other two reports. Do **not** lead with fair value vs price + MoS or a bull/base/bear cover verdict. Leave a one-line placeholder for the audit verdict — Phase 5 will fill it with **Audit PASS = process completeness (provenance/hooks), not an investment recommendation or buy list.** Do not put ATR share-count on this cover as a position size.
```

---

## Phase 5 — Agent 13 audit (`coder`)

### Agent 13

```text
Audit the TICKER session at S. You are the last line of defense before the user reads this. The main agent's merges and judgments are IN SCOPE — you audit the orchestrator too.

Judgment-quality anchors (style only): ROOT/harness/exemplars/rationale_quality.md, hooks_quality.md, handoff_quality.md — grade rationales/hooks/handoffs against GOOD vs BAD patterns; schema-valid hollow work is still a finding.

Read S/reports/*.md, all of S/registry/ — including registry/raw/ (diff the raw swarm returns against the merged files), registry/phase_status.json when present (resume map / completeness claims vs artifacts), and registry/handoffs/ (every agent's own account of its data issues and assumptions; cross-check them against what the artifacts actually show — an agent that hit a data problem but didn't disclose it in its artifact is a finding), and S/data/valuation_model.json, and the scripts in S/data/compute/.

Checks (ordered bands — do not skip later bands after early PASS items):

**Band 1 — Units & identity**
1. Number consistency / integrity: report numbers match registry/compute within rounding; registry↔data spot-check 3–5 headlines; FAIL if FV/MOS/probs/entry/stop/key KPIs not rehydratable from registry/compute (chat-only = defect).
1b. MoS units: dual fields consistent when both present; flag fraction-in-`margin_of_safety_pct`; primary MoS uses base. Dual price: if val / technical / tsr current prices differ by >0.5%, require README disclosure of MoS anchor.
1c. scenario_probabilities: only bear/base/bull numerics (extra keys / string rationale inside map = major until fixed). Machine check_session may WARN/FAIL — treat as structural.

**Band 2 — Consumption & process integrity**
2. EXTERNAL VERIFICATION: ≥5 filing-grade numbers vs issuer/EDGAR/exchange **for the same accession already on disk in S/data/raw_sec** (session copy ≠ truth). Do not verify against other research sessions. Consistency is not truth. ≥1 of the ≥5 must be multi-period series or historical stress anchor (not five lines from the same EX-99.1 only). Also ≥3 re-checks against S/data/raw_sec/*.txt.
2b–2d. Deep-dive structure + re-checks; consumption; market_context hooks + intensity gate (high intensity all-noted_only is FAIL-quality). On ≥ 3.4.0 grade `narrative_bind.evidence_hooks` (each FDD/oppath finding id mapped or rejected). On `< 3.4.0` grade `filing_deep_dive_hooks` / `operating_path_hooks` not all-noted_only. Still grade *substance* of use/reject.
2c+. If filing_deep_dive was created during Phase 5 after valuation with empty material hooks → major FAIL (backfill-without-revalue is not PASS) unless re-value or explicit README waive that FV did not consume FDD. **You must not author missing FDD or rewrite valuation as auditor.**
2e–2g. Decision-grade handoffs (four sections); research_brief coverage; news URL sample.
2h. **Agent 4 isolation:** technical.json / handoffs/4* must not cite fundamental paths (valuation_model, filing_deep_dive, background, latest_quarter, market_context, sec_filings, sp_financials, street_estimates, library_bind, archive/library). Machine may FAIL under --full; confirm independence of TA lens.
2i. Swarm lead handoffs present (phase0_* / phase25_*); hollow “none” gaps when artifacts show problems = finding.

**Band 3 — Judgment quality sample**
3. Reproducibility: rerun ALL compute scripts from cache.
4. Justification contract + scripted intermediates. Sample ≥3 path assumptions: FAIL major if rationale cites a different level than value without explicit haircut. "Industry standard" / "mid of band" alone not substantive for ERP. Grade PFP/MoS/probs style against valuation_decision_quality.md GOOD vs BAD.
4-street. Grade Street/Y1 + destock against RESEARCH_AGENTS.md §10c (Street FY+1 is the default Y1 forecast on ≥ 3.0.1; independent_y1 needs a named gate). If `harness_version < 3.0.1`, stop and load ROOT/harness/law_history.md — do not paste 2.7–3.0.0 Street statutes into this prompt.
4-engine. On harness ≥ 3.1.0: `iv_playbook` matches `valuation_router.md`; `fair_value.base` is DCF (or equity DCF), not NAV/ARR/exit/TTC×multiple; `terminal_consistency.method` is Gordon/liquidation/excess_return. Sector module used as KPI/stress only. If `harness_version < 3.1.0`, skip this item (omit-TV was legal). You do not re-value.
4-roic. Grade `roic_identity` against §10d + valuation_decision_quality.md ROIC pair.
4-wacc. Grade `wacc_buildup` against §10e. REIT on ≥ 3.1.0 must not skip WACC because NAV/AFFO.
4-stress. Grade shock surface / `stress_bind` / Unstressed vs stressed card against §10f and §8 5b. Follow the session `harness_version` (2.29–2.43 = 25/15 cliff; ≥ 2.44 = book bind). Do not FAIL a pre-2.44 session for missing `size_cap`.
4-midcycle. Grade `mid_cycle_construction` against §10d.7.
4-tier1. On harness ≥ 3.3.0: grade life-cycle + `stage_fit` against the asset's actual stage (a wrong-stage story is major); `buyer` against the marginal investor; `market_contest` present and any big FV-vs-price gap survived model→input interrogation before a cheapness claim; `option_screens` and the distressed-call replacement (call replaces DCF equity, never adds); `truncation` answered; `per_share_bridge` and `wacc_buildup.erp_method`/`beta_method`/currency match. On ≥ 3.4.0 those identity fields live on `classification.json` (`stage_fit` and overlay screens on the bind). If `harness_version < 3.3.0`, skip this item.
4-story-lock. On harness ≥ 3.4.0: compute honored `classification.json` (playbook/stage/buyer) and `narrative_3p.verdict=PASS`; map keys are story carriers; `story_input_bind` maps them onto the model; `buyer_dials` match the classified buyer. Agent 5 writing or restorying `narrative_bind` is major. If `harness_version < 3.4.0`, skip this item.
9. Reverse-engineering present; priced_for_perfection is a surface dial argument — FAIL if boolean is threshold-only in compute without surface rationale.
10. growth/is_also_growth: SBC/dilution critical intensity.

**Band 4 — Fit & merge**
7–8b. Cross-artifact inputs; **sector fit vs identity** (not consistency with the chosen module); region fit. Challenge the **lead module vs identity**. Tripwire: GICS Consumer Defensive / Farm Products / Packaged Foods **and** branded retail mix **and** `primary_sector=cyclical` → **major** (machine FAIL on harness ≥ 2.9.0) unless a majority of revenue is realized at spot/index/posted producer prices. Lead `module_file` vs identity mismatch → finding. Do not PASS on schema-valid `sector_fit`. Branded CPG with a protein/feed shock is a 2.5 overlay, not proof that `sector_cyclical.md` should lead. Branded consumer / CPG / staples with `primary_sector=growth` → **major** (use native module + `is_also_growth`; do not infer this from FCF alone). Template 30/45/25 without method+counterfactual, mechanical PFP (price≷base only), or wide cone without `decision_usefulness` → **major** on ≥ 2.9.0. README that treats Audit PASS as investable without the completeness disclaimer → **major**. README that leads with fair value vs price / margin of safety **before** quoting duration.action is **major** on ≥ 2.16.0 (any action). Agent 12 `roc_vs_cost_of_capital=fail` next to `franchise_mos` without `quality_bucket=above_wacc` → **major**. After Phase 2.5, `decision.json` with `reopened_after_stress` false/missing is **major** on ≥ 2.14.0 (5b not run). Missing `latest_quarter.cash_quality` on ≥ 2.15.0 is **major**.
11. Merge integrity (raw counts; no invented merge numbers).
12. phase_status lag (pending agents with files on disk) = minor (machine WARN); phase complete without primary artifact = major if not waived; do not author missing FDD yourself as auditor.
13. Process note (harness ≥ 2.20.0): missing/failed `registry/spawns.json` row, `execution=orchestrator_inline` on a specialist, or `registry/abandon.json` is **major** (machine FAIL / terminal). Do not PASS “isolation” from artifacts alone. Cryptographic Task-API proof is still unavailable; require the ledger to exist, launch-then-return, and match designed specialists / year-readers / swarm raws. Agent 5 `execution` stays `subagent` after 5b.

Write S/registry/audit.json per ROOT/harness/schemas/audit.schema.json: verdict PASS only if no critical/major issues; list every issue with severity, location, and concrete fix.
```

On `FAIL`: fix issues (max 2 iterations), record `resolution` per issue, re-run audit. After the final audit, update the README's audit-verdict line and any waived issues (AGENTS.md §8).
